--- a/wellcare.html
+++ b/wellcare.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wellcare</title>
   <link rel="stylesheet" href="wellcare.css" />
+  <link rel="stylesheet" href="wellcare-contactus.css">
 </head>
 <body>
   <header class="site-header">
@@ -12,7 +13,7 @@
       <div class="logo">Wellcare</div>
       <nav class="nav" id="navbar">
         <a href="#">Home</a>
-        <a href="#">Features</a>
+        <a href="wellcare-features.html">Features</a>
         <a href="#">How it Works</a>
         <a href="#">Contact</a>
       </nav>
@@ -25,7 +26,7 @@
       <h1>Care that Connects, Wherever You Are</h1>
       <p>Empowering families to support loved ones in Nigeria with trusted healthcare — fast, easy, and personal.</p>
       <button class="btn-primary">
-        <a href="wellcare signup.html">Get Started</a>
+        <a href="wellcare-signup.html">Get Started</a>
       </button>
     </section>
 
@@ -33,14 +34,17 @@
       <div class="feature-card">
         <h3>Instant Booking</h3>
         <p>Book verified health providers with just a few taps, no long forms or delays.</p>
+        <a href="wellcare-instantbooking.html">Instant Booking</a>
       </div>
       <div class="feature-card">
         <h3>Flexible Payment</h3>
         <p>Pay for care through secure remittances or locally, based on your preference.</p>
+        <a href="wellcare-flexiblepayment.html">Flexible Payment</a>
       </div>
       <div class="feature-card">
         <h3>Live Updates</h3>
         <p>Stay informed in real-time as your loved one receives care at home or facility.</p>
+        <a href="wellcare-liveupdates.html"> Live Updates</a>
       </div>
     </section>
 
@@ -74,24 +78,52 @@
       </div>
     </section>
 
-    <section class="login-section">
-      <h2>Login to Your Account</h2>
-      <form class="login-form" action="/login" method="post">
-        <input type="email" name="email" placeholder="Email address" required />
-        <input type="password" name="password" placeholder="Password" required />
-        <button type="submit" class="btn-primary">Login</button>
-      </form>
-    </section>
-
     <section class="cta">
       <h2>Need to Talk to Us?</h2>
       <p>We're just a message away. Let us help you find the right care for your loved ones.</p>
-      <button class="btn-primary">Contact Us</button>
+      <button class="btn-primary">
+      <a href="wellcare-contactus.html"> Contact Us</a> </button>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Wellacare. All rights reserved.</p>
+  <footer class="wellcare-footer">
+    <div class="footer-wrap">
+      <div class="footer-brand">
+        <h3>WellCare</h3>
+        <p>Empowering families with trusted, community‑driven healthcare.</p>
+        <link rel="stylesheet" href="wellcare-footer.css">
+      </div>
+  
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="features.html">Features</a></li>
+          <li><a href="how-it-works.html">How it Works</a></li>
+          <li><a href="wellcare-faqs.html">FAQs</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-contact">
+        <h4>Contact Us</h4>
+        <p>Email: support@wellcare.com</p>
+        <p>Phone: +234 800 123 4567</p>
+      </div>
+  
+      <div class="footer-social">
+        <h4>Follow Us</h4>
+        <ul>
+          <li><a href="#" aria-label="Twitter">Twitter</a></li>
+          <li><a href="#" aria-label="Facebook">Facebook</a></li>
+          <li><a href="#" aria-label="Instagram">Instagram</a></li>
+        </ul>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>&copy; 2025 WellCare. All rights reserved.</p>
+    </div>
   </footer>
 
   <script>
