--- a/WELLCARE HTML/wellcare-faqs.html
+++ b/WELLCARE HTML/wellcare-faqs.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FAQs – WellCare</title>
-  <link rel="stylesheet" href="wellcare-faqs.css" />
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-faqs.css" />
 </head>
 <body>
 
