--- a/WELLCARE HTML/wellcare-features.html
+++ b/WELLCARE HTML/wellcare-features.html
@@ -2,7 +2,7 @@
     <button class="feature-card">
       <h3>Personalized Care</h3>
       <p>We provide care tailored to each individual's needs and preferences.</p>
-      <link rel="stylesheet" href="wellcare-features.css">
+      <link rel="stylesheet" href="/WELLCARE CSS/wellcare-features.css">
     </button>
   
     <button class="feature-card">
