--- a/WELLCARE HTML/wellcare-flexiblepayment.html
+++ b/WELLCARE HTML/wellcare-flexiblepayment.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wellcare – Flexible Payment</title>
-  <link rel="stylesheet" href="wellcare-felxiblepayment.css" />
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-felxiblepayment.css" />
 </head>
 <body>
 
@@ -14,7 +14,7 @@
       <p>Select your preferred payment method and enter the details below.</p>
 
       <!-- Form now points to wellcare-payment.html -->
-      <form class="fp-form" action="wellcare-payment.html" method="get">
+      <form class="fp-form" action="/WELLCARE HTML/wellcare-payment.html" method="get">
         <div class="fp-option">
           <input type="radio" id="remittance" name="paymentMethod" value="remittance" checked>
           <label for="remittance">International Remittance</label>
