--- a/WELLCARE HTML/wellcare-footer.html
+++ b/WELLCARE HTML/wellcare-footer.html
@@ -3,7 +3,7 @@
       <div class="footer-brand">
         <h3>WellCare</h3>
         <p>Empowering families with trusted, community‑driven healthcare.</p>
-        <link rel="stylesheet" href="wellcare-footer.css">
+        <link rel="stylesheet" href="/WELLCARE CSS/wellcare-footer.css">
       </div>
   
       <div class="footer-links">
