--- a/WELLCARE HTML/wellcare-paymentsuccessful.html
+++ b/WELLCARE HTML/wellcare-paymentsuccessful.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Payment Successful - WellCare</title>
-  <link rel="stylesheet" href="wellcare-paymentsuccessful.css" />
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-paymentsuccessful.css" />
 </head>
 <body>
   <div class="success-container">
     <div class="success-icon">✔</div>
     <h1>Payment Successful</h1>
     <p>Thank you for your payment. Your subscription has been activated.</p>
-    <a href="wellcare.html" class="home-button">Return to Homepage</a>
+    <a href="index.html" class="home-button">Return to Homepage</a>
   </div>
 </body>
 </html>
