--- a/WELLCARE HTML/wellcare-contactus.html
+++ b/WELLCARE HTML/wellcare-contactus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wellcare – Contact Us</title>
-  <link rel="stylesheet" href="wellcare-contactus.css"/>
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-contactus.css"/>
 </head>
 <body>
   <section class="contact-us">
