--- a/WELLCARE HTML/wellcare-instantbooking.html
+++ b/WELLCARE HTML/wellcare-instantbooking.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Instant Booking – Wellcare</title>
-  <link rel="stylesheet" href="wellcare-instantbooking.css" />
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-instantbooking.css" />
 </head>
 <body>
   <section class="booking-section">
