--- a/WELLCARE HTML/wellcare-liveupdates.html
+++ b/WELLCARE HTML/wellcare-liveupdates.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wellcare – Live Updates</title>
-  <link rel="stylesheet" href="wellcare-liveupdates.css" />
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-liveupdates.css" />
 </head>
 <body>
 
