--- a/WELLCARE HTML/wellcare-payment.html
+++ b/WELLCARE HTML/wellcare-payment.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proceed to Payment – Wellcare</title>
-  <link rel="stylesheet" href="wellcare-payment.css"/>
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-payment.css"/>
 
 </head>
 <body>
