--- a/WELLCARE HTML/wellcare-signup.html
+++ b/WELLCARE HTML/wellcare-signup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wellcare Sign Up</title>
-  <link rel="stylesheet" href="wellcare-signup .css" />
+  <link rel="stylesheet" href="/WELLCARE CSS/wellcare-signup .css" />
 </head>
 <body>
   <div class="signup-container">
