--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Wellcare</title>
   <link rel="stylesheet" href="/WELLCARE CSS/wellcare.css" />
   <link rel="stylesheet" href="/WELLCARE CSS/wellcare-contactus.css">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3J6Z6RD23Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3J6Z6RD23Q');
+</script>
 </head>
 <body>
   <header class="site-header">
