--- a/WELLCARE HTML/wellcare-login.html
+++ b/WELLCARE HTML/wellcare-login.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wellcare Login</title>
   <link rel="stylesheet" href="/WELLCARE CSS/wellcare-login.css" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3J6Z6RD23Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3J6Z6RD23Q');
+</script>
 </head>
 <body>
   <div class="login-container">
