--- a/WELLCARE HTML/wellcare-footer.html
+++ b/WELLCARE HTML/wellcare-footer.html
@@ -4,6 +4,15 @@
         <h3>WellCare</h3>
         <p>Empowering families with trusted, community‑driven healthcare.</p>
         <link rel="stylesheet" href="/WELLCARE CSS/wellcare-footer.css">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3J6Z6RD23Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3J6Z6RD23Q');
+</script>
       </div>
   
       <div class="footer-links">
