--- a/WELLCARE HTML/wellcare-features.html
+++ b/WELLCARE HTML/wellcare-features.html
@@ -3,6 +3,15 @@
       <h3>Personalized Care</h3>
       <p>We provide care tailored to each individual's needs and preferences.</p>
       <link rel="stylesheet" href="/WELLCARE CSS/wellcare-features.css">
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3J6Z6RD23Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3J6Z6RD23Q');
+</script>
     </button>
   
     <button class="feature-card">
