--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
         <a href="/WELLCARE HTML/wellcare-signup.html">Get Started</a>
       </button>
     </section>
+    <!-- Vision & Mission Section -->
+<section id="vision-mission" class="vision-mission">
+  <div class="container">
+    <h2 class="vm-heading">Our Vision & Mission</h2>
+    <div class="vm-content">
+      <div class="vision">
+        <h3>Vision</h3>
+        <p>To make quality primary healthcare accessible, affordable, and reliable for every Nigerian regardless of location, age, or income by empowering families at home and abroad to support care seamlessly.</p>
+      </div>
+      <div class="mission">
+        <h3>Mission</h3>
+        <p>To deliver community based, digital-first primary healthcare by connecting Nigerians with trusted local providers enabling loved ones, near and far, to fund, coordinate, and monitor care with ease.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section class="features">
       <div class="feature-card">
