--- a/index.html
+++ b/index.html
@@ -157,5 +157,10 @@
       document.getElementById('navbar').classList.toggle('show');
     });
   </script>
+  <!-- ... your other content ... -->
+<script src="WELLCARE JS/wellcare.js"></script>
+</body>
+</html>
+
 </body>
 </html>
