--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
+    <div class="container" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
       <div class="logo">Wellcare</div>
       <nav class="nav" id="navbar">
         <a href="#">Home</a>
@@ -77,15 +77,15 @@
       <h2>Real People. Real Care.</h2>
       <div class="gallery">
         <div class="gallery-item">
-          <img src="elder1.jpg" alt="Elderly woman being cared for" />
+          <img src="images/elder1.jpg" alt="Elderly woman being cared for" />
           <p>Comfort and dignity at every step.</p>
         </div>
         <div class="gallery-item">
-          <img src="elder2.jpg" alt="Caregiver with elderly man" />
+          <img src="images/elder2.jpg" alt="Caregiver with elderly man" />
           <p>Supportive, trusted professionals.</p>
         </div>
         <div class="gallery-item">
-          <img src="elder3.jpg" alt="Happy elderly couple" />
+          <img src="images/elder3.jpg" alt="Happy elderly couple" />
           <p>Peace of mind for families abroad.</p>
         </div>
       </div>
@@ -93,13 +93,19 @@
 
     <section class="testimonials">
       <h2>What Our Users Say</h2>
-      <div class="testimonial">
-        <p>“Wellacare helped me organize care for my mom within minutes. The updates gave me peace of mind.”</p>
-        <strong>— Chika, London</strong>
-      </div>
-      <div class="testimonial">
-        <p>“The simplicity and trust of the process makes it so easy to use from anywhere.”</p>
-        <strong>— Samuel, Abuja</strong>
+      <div class="testDiv" style="display: flex; gap: 1.5rem;">
+        <div class="testimonial">
+          <p>“I was able to book a caregiver for my dad in Nigeria while I was in the UK. It was so easy!”</p>
+          <strong>— Aisha, London</strong>
+        </div>
+        <div class="testimonial">
+          <p>“Wellacare helped me organize care for my mom within minutes. The updates gave me peace of mind.”</p>
+          <strong>— Chika, London</strong>
+        </div>
+        <div class="testimonial">
+          <p>“The simplicity and trust of the process makes it so easy to use from anywhere.”</p>
+          <strong>— Samuel, Abuja</strong>
+        </div>
       </div>
     </section>
 
